fix: add spacing to Manage Search admin page and fix alignment in Glossary LanguageSelect

--- a/server/zanata-frontend/src/frontend/app/containers/Glossary/index.less
+++ b/server/zanata-frontend/src/frontend/app/containers/Glossary/index.less
@@ -9,11 +9,16 @@
 }
 
 td.languageSelect span.Select-value-label {
-  vertical-align: sub;
+  line-height: 2.5rem;
 }
 
 td.languageSelect .Selectmenu {
   min-width: 12.25rem;
+}
+
+td.languageSelect .Select-placeholder {
+  position: absolute;
+  top: 4px;
 }
 
 table.glossaryEntry .td-3 .textInput,
